Add seats reservation - static v 0.0

--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -27,7 +27,7 @@
                         <div class="detailsButDiv" *ngIf="this.showItemBoxC3Status[i] === 0"><button (click)="showItemBoxC3(i)" class="detailsButton">Show more details</button></div>
                         <div class="detailsButDiv" *ngIf="this.showItemBoxC3Status[i] === 1"><button (click)="showItemBoxC3(i)" class="detailsButton">Hide more details</button></div>
                     </div>
-                    <div id="{{ 'itemBoxC3_' + i }}" [ngClass]="{'hideItem' : this.showItemBoxC3Status[i] === 0, 'itemBoxC3' : this.showItemBoxC3Status[i] === 1 }">
+                    <div id="{{ 'itemBoxC3_' + i }}" [ngClass]="{'hideItem' : this.showItemBoxC3Status[i] === 0, 'itemBoxC3' : this.showItemBoxC3Status[i] === 1}">
                         <div>itemBoxC3</div>
                     </div>
                 </div>
@@ -68,44 +68,10 @@
                                 <!-- Row A -->
                                 <div class="planeR1">
                                     <div class="labelLetter">A</div>
-                                    <button (click)="seatsReservation('A1')" class="seatFree">1</button>
-                                    <button class="seatFree">2</button>
-                                    <button class="seatFree">3</button>
-                                    <button class="seatFree">4</button>
-                                    <button class="seatFree">5</button>
-                                    <button class="seatFree">6</button>
-                                    <button class="seatFree">7</button>
-                                    <button class="seatFree">8</button>
-                                    <button class="seatFree">9</button>
-                                    <button class="seatFree">10</button>
-                                    <button class="seatFree">11</button>
-                                    <button class="seatFree">12</button>
-                                    <button class="seatFree">13</button>
-                                    <button class="seatFree">14</button>
-                                    <button class="seatFree">15</button>
-                                    <button class="seatFree">16</button>
-                                    <button class="seatFree">17</button>
-                                    <button class="seatFree">18</button>
-                                    <button class="seatFree">19</button>
-                                    <button class="seatFree">20</button>
-                                    <button class="seatFree">21</button>
-                                    <button class="seatFree">22</button>
-                                    <button class="seatFree">23</button>
-                                    <button class="seatFree">24</button>
-                                    <button class="seatFree">25</button>
-                                    <button class="seatFree">26</button>
-                                    <button class="seatFree">27</button>
-                                    <button class="seatFree">28</button>
-                                    <button class="seatFree">29</button>
-                                    <button class="seatFree">30</button>
-                                    <button class="seatFree">31</button>
-                                    <button class="seatFree">32</button>
-                                    <button class="seatFree">33</button>
-                                    <button class="seatFree">34</button>
-                                    <button class="seatFree">35</button>
-                                    <button class="seatFree">36</button>
-                                    <button class="seatFree">37</button>
-                                    <button class="seatFree">38</button>
+                                    <!-- <button #A1 [ngClass]="{'seatFree' : this.seatsA[0] === 0, 'seatTaken' : this.seatsA[0] === 1}" (click)="seatsA[0] = 1" (dbclick)="this.seatsA[0] = 0">1</button> -->
+                                    <div *ngFor="let seat of this.seatsA, index as i">
+                                        <button #Ai [ngClass]="{'seatFree' : this.seatsA[i] === 0, 'seatTaken' : this.seatsA[i] === 1}" (click)="seatsReservation('A', i)">{{i+1}}</button>
+                                    </div>
                                 </div>
     
                                 <!-- Row B -->
