--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -9,6 +9,7 @@ $font-family_2:  Cursive, Helvetica, sans-serif;
 
 .hideItem{
     display: none;
+    transition: 0.5s;
 }
 
 body{
@@ -135,8 +136,6 @@ body{
                 cursor: pointer;
                 background-color: #fe9400;
                 color: rgb(0, 0, 0);
-                // padding: 15px 40px;
-                transition: 0.5s;
                 border-radius: 15px 15px 15px 15px;
             }
 
@@ -150,7 +149,7 @@ body{
                 padding: 5px 5px 5px 5px;
                 display: flex;
                 flex-direction: column;
-                transition: 0.5s;
+                transition: 0.8s;
             }
 
             .seatsReservation{
@@ -256,9 +255,11 @@ body{
                 width: 18px;
                 height: 18px;
                 cursor: pointer;
+                cursor: pointer;
                 border-radius: 2px 2px 2px 2px;
                 margin: 2.5px 0px 0px 4px;
-                background-color: #fe0000;
+                border: 0.5px solid black;
+                background-color: #fe9800;
             }
 
             .baggageOption{
