--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
     // position: fixed;
+    position: absolute;
     bottom: 0;
     box-sizing: border-box;
     width: 100%;
