--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
             <div id="home" class="topMenuItem"><a class="topMenuItem" routerLink="search-results" routerLinkActive="topMenuItem_active">Flights</a></div>
             <!-- <div id="weather" class="topMenuItem"><a class="topMenuItem" routerLink="weather" routerLinkActive="topMenuItem_active">Weather</a></div> -->
             <!-- <div id="contactUs" class="topMenuItem"><a class="topMenuItem" routerLink="" routerLinkActive="topMenuItem_active">Contact Us</a></div> -->
-            <div id="myAccount" class="topMenuItem"><a class="topMenuItem" routerLink="account" routerLinkActive="topMenuItem_active">My Account</a></div>
+            <!-- <div id="myAccount" class="topMenuItem"><a class="topMenuItem" routerLink="account" routerLinkActive="topMenuItem_active">My Account</a></div> -->
         </div>
     </div>
 </header>
