--- a/src/app/search-results/search-results.component.html
+++ b/src/app/search-results/search-results.component.html
@@ -6,9 +6,8 @@
         <div *ngIf="this.dataFromContentComponent" class="header1">Available connections:</div>
         <div *ngIf="!this.dataFromContentComponent" class="header1">No available connection go to home a choose a connection</div>
         <div *ngFor="let data of this.showItemBoxC3Status; index as i">
-            <div class="item" id="{{ 'item' + i }}">
-                <div class="provider" *ngIf="this.dataFromContentComponent.dataAPI.data[i].gate">{{this.dataFromContentComponent.dataAPI.data[i].gate}}</div>
-                <div class="provider" *ngIf="!this.dataFromContentComponent.dataAPI.data[i].gate">no data</div>
+            <div class="item" *ngIf="this.dataFromContentComponent.dataAPI.data[i].gate" id="{{ 'item' + i }}">
+                <div class="provider">{{this.dataFromContentComponent.dataAPI.data[i].gate}}</div>
                 <div class="itemBox">
                     <div class="itemBoxC1">
                         <div class="flyFrom">{{this.dataFromContentComponent.flyFromName | slice: 0: -15}} {{this.dataFromContentComponent.flyFromName | slice: -3}}</div>
