--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -12,10 +12,10 @@ $font-family_2:  Cursive, Helvetica, sans-serif;
     transition: 0.5s;
 }
 
-body{
-    height: fit-content;
-    width: auto;
-}
+// body{
+//     height: fit-content;
+//     width: auto;
+// }
 
 .header1{
     padding: 30px 0px 30px 0px;
