--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,17 +10,8 @@ $font-color_1: rgb(255, 255, 255);
 $font-family_1: 'Times New Roman', Times, serif;
 
 body{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    min-height: 100vh;
-    background: linear-gradient(to bottom, transparent, rgb(255, 255, 255) 100%),
-    url(../assets/background1.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    display: flex;
+    flex-direction: column;
     // background: rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 10%, rgba(255, 255, 255, .1) 40%, rgba(255, 255, 255, .5) 75%, rgba(255, 255, 255, 1) 100%) repeat scroll 0 0;
     // position: relative;
 }
