--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -11,18 +11,46 @@ $font-family_2:  Cursive, Helvetica, sans-serif;
     display: none;
 }
 
-body{
-    height: fit-content;
-    width: auto;
-    // display: flex;
-    // flex-direction: column;
+.content{
+    height: 90%;
+    width: 100%;
+    background: linear-gradient(to bottom, transparent, rgb(255, 255, 255) 100%),
+    url(../../assets/background1.jpg);
+    // background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.popup{
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    margin: 0, auto;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.6;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    color: #ffffff;
+}
+
+.progressBar{
+    margin: auto;
+    padding-top: 15px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 #header1{
-    margin: 50px 15% 0% 15%;
+    padding: 20px 15% 0% 15%;
     font-family: $font-family_2;
     // font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 40px;
+    font-size: 50px;
     letter-spacing: 2px;
     text-align: center;
     word-spacing: 4px;
@@ -35,7 +63,7 @@ body{
     }
 
     .searchPanel{
-        margin: 50px auto 320px auto ;
+        margin: 50px auto 120px auto;
         display: flex;
         flex-direction: column;
         width: fit-content;
