--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,17 +1,19 @@
 *{
 	margin: 0;
 	padding: 0;
-    // position: fixed;
-    position: absolute;
-    bottom: 0;
-    box-sizing: border-box;
-    width: 100%;
-    height: fit-content;
     background: rgba(255, 255, 255, 0.1);
 }
 
 .copyright{
-    padding-top: 10px;
+    background-color: rgb(161, 111, 111);
+    width: 100%;
+    height: fit-content;
     text-align: center;
-    padding-bottom: 10px;
 }
+
+ /* Responsive Styles */
+// @media screen and (max-width: 767px){
+//     .copyright{
+//         position: relative;
+//     }
+// }
