--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
-$background-color_1: rgb(234, 227, 227);
-$font-color_1: rgb(255, 255, 255);
-$font-color_2:rgb(244, 226, 226);
+$background-color_1: rgb(255, 255, 255);
+$font-color_1: rgb(84, 84, 84);
+$font-color_2:rgb(84, 84, 84);
 $font-family_1:  Cursive, Helvetica, sans-serif;
 
 *{
@@ -11,16 +11,17 @@ $font-family_1:  Cursive, Helvetica, sans-serif;
 
 header{
     width: 100%;
+    height: 5%;
     display: flex;
     flex-direction: column;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgb(255, 255, 255);
     // background: linear-gradient(0deg, #50577D 0%, #757DA0 50%, #605877 100%); 
     height: fit-content ;
     .headerContent{
         display: inline-flex;
         flex-direction: column;
         justify-content: space-between;
-        margin: 10px 15% 0% 15%;
+        padding: 0px 15% 0% 15%;
         width: 70%;
         // height: fit-content;
         // height: 35px;
