--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,56 +6,97 @@ $font-family_1:  Cursive, Helvetica, sans-serif;
 *{
 	margin: 0;
 	padding: 0;
-    // box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 header{
-    width: 100%;
-    height: 5%;
+    width: 850px;
+    height: 90px;
+    margin: auto;
     display: flex;
-    flex-direction: column;
-    background: rgb(255, 255, 255);
-    // background: linear-gradient(0deg, #50577D 0%, #757DA0 50%, #605877 100%); 
-    height: fit-content ;
-    .headerContent{
-        display: inline-flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 0px 15% 0% 15%;
-        width: 70%;
-        // height: fit-content;
-        // height: 35px;
-            .logo{
-                min-width: fit-content;
-                max-width: 100px;
-            }
-            .topMenu{
-                font-size: 25px;
-                font-family: $font-family_1 ;
-                margin: 10px 5px 10px 0px;
-                display: flex;
-                align-self: flex-end;
-                justify-content: space-between;
-                color: $font-color_1;
-                font-family: $font-family_1;
-                .topMenuItem{
-                    padding-left: 15px;
-                    color:$font-color_2;
-                    text-decoration: none;
-                    height: fit-content;
-                    width: fit-content;
-                    transition: 1s;
-                }
+    flex-direction: row;
+    .logo{
+        height: 90px;
+        width: 20%;
+    }
+    .topMenu{
+        height: 100%;
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
 
-                .topMenuItem:hover{
-                    color: #000000;
-                }
-                .topMenuItem_active{
-                    color: #000000;
-                }
-            }
+    .topMenuItem{
+        cursor: pointer;
+        padding-left: 10px;
+        font-size: 25px;
+        font-family: $font-family_1 ;
+        color: $font-color_1;
+        text-decoration: none;
+        transition: 0.5s;
+    }
+
+    .topMenuItem:hover{
+        color: #ff9d00b7;
+        transition: 0.5s;
+
+    }
+    .topMenuItem_active{
+        color: #ff9d00b7;
     }
 }
+
+// header{
+//     width: 100%;
+//     height: 5%;
+//     padding: 0px 15% 0% 15%;
+//     display: flex;
+//     flex-direction: row;
+//     background: rgb(255, 255, 255);
+//     // background: linear-gradient(0deg, #50577D 0%, #757DA0 50%, #605877 100%); 
+//     height: fit-content ;
+//     .headerContent{
+
+//         width: 70%;
+//             .logo{
+//                 width: 30%;
+//                 min-width: fit-content;
+//                 max-width: 100px;
+//             }
+//             .topMenu{
+//                 width: 70%;
+//                 font-size: 25px;
+//                 font-family: $font-family_1 ;
+//                 margin: 10px 5px 10px 0px;
+//                 color: $font-color_1;
+//                 font-family: $font-family_1;
+//                 .topMenuItem{
+//                     padding-left: 15px;
+//                     color:$font-color_2;
+//                     text-decoration: none;
+//                     height: fit-content;
+//                     width: fit-content;
+//                     transition: 1s;
+//                 }
+
+//                 .topMenuItem:hover{
+//                     color: #000000;
+//                 }
+//                 .topMenuItem_active{
+//                     color: #000000;
+//                 }
+//             }
+//     }
+// }
+
+
+
+
+
+
+
 
  /* Responsive Styles */
 @media screen and (max-width: 767px){
