New layout v0.1 - modify header + add RWD

--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -47,7 +47,7 @@ $font-family_2:  Cursive, Helvetica, sans-serif;
 }
 
 #header1{
-    padding: 20px 15% 0% 15%;
+    padding-top: 20px;
     font-family: $font-family_2;
     // font-family: "Arial Black", Gadget, sans-serif;
     font-size: 50px;
