--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -15,10 +15,22 @@ header{
     margin: auto;
     display: flex;
     flex-direction: row;
+
+    .logoArea{
+        width: 40%;
+        display: flex;
+        flex-direction: row;
+    }
+
     .logo{
         height: 90px;
-        width: 20%;
+        width: 50%;
     }
+
+    .rwdButton{
+        display: none;
+    }
+
     .topMenu{
         height: 100%;
         width: 80%;
@@ -39,84 +51,51 @@ header{
     }
 
     .topMenuItem:hover{
-        color: #ff9d00b7;
+        color: #ff9d00;
         transition: 0.5s;
 
     }
     .topMenuItem_active{
-        color: #ff9d00b7;
+        color: #ff9d00;
     }
+
+
 }
-
-// header{
-//     width: 100%;
-//     height: 5%;
-//     padding: 0px 15% 0% 15%;
-//     display: flex;
-//     flex-direction: row;
-//     background: rgb(255, 255, 255);
-//     // background: linear-gradient(0deg, #50577D 0%, #757DA0 50%, #605877 100%); 
-//     height: fit-content ;
-//     .headerContent{
-
-//         width: 70%;
-//             .logo{
-//                 width: 30%;
-//                 min-width: fit-content;
-//                 max-width: 100px;
-//             }
-//             .topMenu{
-//                 width: 70%;
-//                 font-size: 25px;
-//                 font-family: $font-family_1 ;
-//                 margin: 10px 5px 10px 0px;
-//                 color: $font-color_1;
-//                 font-family: $font-family_1;
-//                 .topMenuItem{
-//                     padding-left: 15px;
-//                     color:$font-color_2;
-//                     text-decoration: none;
-//                     height: fit-content;
-//                     width: fit-content;
-//                     transition: 1s;
-//                 }
-
-//                 .topMenuItem:hover{
-//                     color: #000000;
-//                 }
-//                 .topMenuItem_active{
-//                     color: #000000;
-//                 }
-//             }
-//     }
-// }
-
-
-
-
-
-
-
 
  /* Responsive Styles */
 @media screen and (max-width: 767px){
     header{
-        .headerContent{
-            margin: 5px 0% 0% 0%;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: fit-content;
+        flex-direction: column;
+        .logoArea{
+        width: 100%;
+        }
+        .logo{
+            width: 80%;
+            order: 1;
+        }
+        .rwdButton{
+            display: flex;
+            width: 20%;
+            height: 90px;
+            padding: 0px 0px 0px 20px;
+            order: 2;
+        }
+        .topMenu{
+            margin: 0;
+            padding: 0;
             width: 100%;
             height: fit-content;
-                .logo{
-                    padding-left: 5px;
-                    width: 100%;
-                }
-                .topMenu{
-                    width: 100%;
-                    margin: 5px 5px 5px 0px;
-                    flex-direction: column;
-                    .topMenuItem{
-                        padding-left: 5px;
-                    }
-                }
+            flex-direction: column;
+            order: 3;
         }
+
+        .topMenuItem{
+            padding: 0px;
+        }
+
     }
 }
