--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,7 +6,7 @@ $font-family_1:  Cursive, Helvetica, sans-serif;
 *{
 	margin: 0;
 	padding: 0 10% 0% 0% 15%;
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
 header{
@@ -18,8 +18,6 @@ header{
 
     .logoArea{
         width: 40%;
-        display: flex;
-        flex-direction: row;
     }
 
     .logo{
@@ -32,13 +30,13 @@ header{
     }
 
     .topMenu{
+        width: 60;
         height: 100%;
-        padding: 0px 90px 0px 150px;
-        width: fit-content;
+        padding: 0px 90px 0px 50px;
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: center;
+        // justify-content: center;
     }
 
     .topMenuItem{
@@ -73,6 +71,8 @@ header{
         flex-direction: column;
         .logoArea{
         width: 100%;
+        display: flex;
+        flex-direction: row;
         }
         .logo{
             width: 50%;
